# dctl

./: .appveyor.yml  .cproject  .gitignore  .hgignore  .project  .travis.yml  CMakeLists.txt  DCTL.vcxproj  DCTL.vcxproj.filters  Library.vcxproj  Library.vcxproj.filters  Mistral.vcxproj.filters  README.md  Test.vcxproj  Test.vcxproj.filters  chat_message.hpp  devenv.sh  gmath.tab.h  install_libcxx.sh  main.cpp  parser.tab.h  test_config.h  test_config.hpp  test_main.cpp
Hash/: Map.h  (+26 more)
example/: CMakeLists.txt  constexpr.cpp  deep_perft.cpp  deep_perft.txt  edgb.cpp  fen.cpp  fen.txt  perft.cpp  perft.txt  play.cpp  play.txt  stratego.cpp
test/: Boost_pch.hpp  CMakeLists.txt  STL_pch.hpp  boost_pch.hpp  config.hpp  main.cpp  precompiled.cpp  precompiled.hpp  stl_pch.hpp  test_config.hpp  test_main.cpp
test/angle/: Degrees.cpp  Traits.cpp  transform.cpp
test/bit/: Bit.cpp  Lookup.cpp  Loop.cpp  bit.cpp  intrinsic.cpp  intrinsic.hpp  lookup.cpp  loop.cpp  set.cpp
test/board/: Angle.cpp  Coordinates.cpp  Cyclic.cpp  Dimensions.cpp  Grid.cpp  Traits.cpp  coordinates.cpp  dimensions.cpp
test/dxp/: Parser.cpp  parser.cpp
test/group/: action.cpp  axioms.cpp
test/include/: group.hpp
test/include/actions/: fixture.hpp
test/include/board/: group.hpp  sequence.hpp  transform.hpp
test/include/group/: action.hpp  axioms.hpp  transform.hpp
test/include/rules/: precedence.hpp
test/include/search/: fixture.hpp
test/include/successor/: fixture.hpp
test/include/walk/: fixture.hpp
test/mpl/: algorithm.cpp  type_traits.cpp
test/search/: Fixture.hpp  Root.cpp  Score.cpp  Solve.cpp  fixture.hpp
test/search/egdb/: Fixture.hpp  Frisian.cpp  International.cpp  Killer.cpp  frisian.cpp  international.cpp  killer.cpp
test/search/initial/: International.cpp  international.cpp
test/setup/: Layout.cpp  Setup.cpp  Wesselink.cpp  layout.cpp  wesselink.cpp
test/src/: board_traits.cpp  color_piece.cpp  group.hpp
test/src/angle/: _home_rein_projects_dctl_test_src_angle_angle  _home_rein_projects_dctl_test_src_angle_cyclic  _home_rein_projects_dctl_test_src_angle_degrees  _home_rein_projects_dctl_test_src_angle_traits  _home_rein_projects_dctl_test_src_angle_transform  angle.cpp  cyclic.cpp  degrees.cpp  literals.cpp  traits.cpp  transform.cpp
test/src/bit/: _home_rein_projects_dctl_test_src_bit_algorithm  _home_rein_projects_dctl_test_src_bit_iterator  _home_rein_projects_dctl_test_src_bit_set  algorithm.cpp  iterator.cpp  set.cpp
test/src/bitset/: bitset.cpp
test/src/board/: _home_rein_projects_dctl_test_src_board_board  _home_rein_projects_dctl_test_src_board_mask  board.cpp  coordinates.cpp  dimensions.cpp  mask.cpp  sequence.hpp  set_type_max_size.cpp  shift_size.cpp  traits.cpp
test/src/core/: board_traits.cpp  color_piece.cpp
test/src/dxp/: _home_rein_projects_dctl_test_src_dxp_parser  parser.cpp
test/src/egdb/: _home_rein_projects_dctl_test_src_egdb_binomial  _home_rein_projects_dctl_test_src_egdb_index  binomial.cpp  database.cpp  divide.cpp  index.cpp
test/src/game/: _home_rein_projects_dctl_test_src_game_play  play.cpp
test/src/grid/: _home_rein_projects_dctl_test_src_grid_coordinates  _home_rein_projects_dctl_test_src_grid_dimensions  _home_rein_projects_dctl_test_src_grid_shift_size  coordinates.cpp  dimensions.cpp  shift_size.cpp
test/src/group/: action.hpp  axioms.hpp  cyclic.hpp  primitives.hpp  transform.hpp
test/src/preprocessor/: _home_rein_projects_dctl_test_src_preprocessor_get_type  _home_rein_projects_dctl_test_src_preprocessor_has_type  get_type.cpp
test/src/rule_traits/: board.cpp  initial_gap.cpp  is_absolute_with_king.cpp  is_backward_pawn_jump.cpp  is_en_passant_jump_removal.cpp  is_halt_behind_king.cpp  is_king_order.cpp  is_land_behind_piece.cpp  is_orthogonal_jump.cpp  is_pawn_jump_king.cpp  is_trivial.cpp  jump.cpp  king_range.cpp  king_range.hpp  king_range_category.cpp  max_same_king_push.cpp  no_progress.cpp  no_progress.hpp  notation.cpp  precedence.cpp  promotion.cpp  promotion_category.cpp
test/src/rules/: checkers.cpp  czech.cpp  frisian.cpp  international.cpp  italian.cpp  killer.cpp  pool.cpp  precedence.hpp  russian.cpp  spanish.cpp  thai.cpp
test/src/search/: _home_rein_projects_dctl_test_src_search_score  fixture.hpp  score.cpp
test/src/setup/: _home_rein_projects_dctl_test_src_setup_layout  _home_rein_projects_dctl_test_src_setup_wesselink  layout.cpp  range.cpp  wesselink.cpp
test/src/successor/: fixture.hpp
test/src/util/: algorithm.cpp  literals.cpp
test/src/utility/: _home_rein_projects_dctl_test_src_utility_algorithm  _home_rein_projects_dctl_test_src_utility_variadic  algorithm.cpp  variadic.cpp
test/src/walk/: fixture.hpp
test/src/xstd/: algorithm.cpp  iterator.cpp  set.cpp
test/successor/: Fixture.hpp  Successor.cpp  fixture.hpp
test/successor/regressions/: Italian.cpp  italian.cpp
test/successor/rulebook/: Fixture.hpp  International.cpp  Italian.cpp  international.cpp  italian.cpp
test/test/: config.hpp  group.hpp
test/test/angle/: angle.cpp  cyclic.cpp  degrees.cpp  traits.cpp  transform.cpp
test/test/bit/: algorithm.cpp  bit.cpp  builtin.cpp  intrinsic.cpp  iterator.cpp  lookup.cpp  loop.cpp  raw.cpp  set.cpp
test/test/board/: board.cpp  coordinates.cpp  dimensions.cpp  grid.cpp  mask.cpp
test/test/dxp/: parser.cpp
test/test/egdb/: binomial.cpp  index.cpp
test/test/game/: play.cpp
test/test/grid/: coordinates.cpp  dimensions.cpp  shift.hpp  shift_size.cpp
test/test/group/: action.hpp  axioms.cpp  axioms.hpp  cyclic.cpp  cyclic.hpp
test/test/mpl/: algorithm.cpp
test/test/packed/: algorithm.cpp  iterator.cpp  raw.cpp  set.cpp
test/test/preprocessor/: get_type.cpp  has_type.cpp
test/test/ray/: cursor.cpp
test/test/search/: fixture.hpp
test/test/setup/: layout.cpp  wesselink.cpp
test/test/successor/: fixture.hpp
test/test/utility/: abs.cpp  algorithm.cpp  range.cpp  variadic.cpp
test/test/walk/: fixture.hpp
test/utility/: algorithm.cpp
test/walk/: Fixture.hpp  Root.cpp  fixture.hpp
test/walk/initial/: Board8x8.cpp  Rectangular.cpp  board8x8.cpp  (+1 more)
(+4032 files in other folders)
